--- a/TheAccountingApp/app/build.gradle
+++ b/TheAccountingApp/app/build.gradle
@@ -52,8 +52,10 @@ dependencies {
     compile "android.arch.persistence.room:rxjava2:${arch_component_version}"
 
 //    RxJava
-    def rx_version = '2.0.5'
+    def rx_version = '2.1.0'
+    def rx_android_version = '2.0.1'
     compile "io.reactivex.rxjava2:rxjava:${rx_version}"
+    compile "io.reactivex.rxjava2:rxandroid:${rx_android_version}"
 
 //    Dagger2
     def dagger_version = '2.8'
