--- a/TheAccountingApp/app/src/main/AndroidManifest.xml
+++ b/TheAccountingApp/app/src/main/AndroidManifest.xml
@@ -21,9 +21,9 @@
         </activity>
         <activity
             android:name=".ui.ProfileActivity"
-            android:label="@string/app_name"
+            android:label="@string/profile"
             android:screenOrientation="portrait"
-            android:launchMode="singleTask"
+            android:launchMode="singleTop"
             android:parentActivityName=".ui.MainActivity">
         </activity>
     </application>
