--- a/TheAccountingApp/app/build.gradle
+++ b/TheAccountingApp/app/build.gradle
@@ -64,5 +64,9 @@ dependencies {
     provided 'javax.annotation:jsr250-api:1.0'
     compile 'javax.inject:javax.inject:1'
 
+//    Constraint Layout
+    def constaint_layout_version = "1.0.2"
+    compile "com.android.support.constraint:constraint-layout:${constaint_layout_version}"
+
     testCompile 'junit:junit:4.12'
 }
